More checkstyling.